# wfbuddy

./: .gitignore  Cargo.toml
data/: Cargo.toml
data/src/: lib.rs
data/src/schema/: ducats.rs  filtered_items.rs  items.rs  mod.rs  prices.rs
ie/: Cargo.toml
ie/src/: image.rs  lib.rs  ocr.rs  theme.rs  util.rs
ie/src/screen/: mod.rs  relicreward.rs
wfbuddy/: Cargo.toml
wfbuddy/src/: capture.rs  config.rs  iepol.rs  lang.rs  logwatcher.rs  main.rs
wfbuddy/src/module/: debug.rs  mod.rs  relicreward.rs
wfbuddy/src/ui/: ext.rs  mod.rs  settings.rs
wfbuddy/src/util/: mod.rs  owned_captures.rs
